<resources>
    <string name="app_name">Elon Parking</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="parking_pass">Select Your Parking Pass</string>
    <string-array name="passes">
        <item>Select Pass</item>
        <item>Visitor</item>
        <item>CS</item>
        <item>EE</item>
        <item>EW</item>
        <item>GF</item>
        <item>GN</item>
        <item>GR</item>
        <item>HN</item>
        <item>KD</item>
        <item>LG</item>
        <item>LS</item>
        <item>MP</item>
        <item>OK</item>
        <item>Faculty/Staff</item>
    </string-array>
    <string-array name="buildings">
        <item>Select Building</item>
        <item>Academic Pavillion</item>
        <item>Admissions Building</item>
        <item>Alamance</item>
        <item>Arts West</item>
        <item>Carolina</item>
        <item>Colonnades</item>
        <item>Danieley Center</item>
        <item>Downtown Elon</item>
        <item>Duke</item>
        <item>Global</item>
        <item>Gym</item>
        <item>HBB</item>
        <item>Honors</item>
        <item>KOBC</item>
        <item>Lakeside</item>
        <item>Library</item>
        <item>Lindner</item>
        <item>Long</item>
        <item>McEwen</item>
        <item>McEwen (Dining)</item>
        <item>McMichael</item>
        <item>Mill Point</item>
        <item>Mooney</item>
        <item>Mosely Center</item>
        <item>Oaks</item>
        <item>PAC</item>
        <item>Powell</item>
        <item>Sloan</item>
        <item>Smith</item>
        <item>West</item>
        <item>Whitley/Carlton</item>

    </string-array>
    <string name="saveActivityMessage">Would you like us to save your pass for future use?</string>
    <string name="title_activity_choose_building">ChooseBuildingActivity</string>
    <string name="title_activity_save_pass">SavePassActivity</string>
    <string name="Okay">OK</string>
    <string name="go">GO</string>
    <string name="no">NO</string>
    <string name="building">Select the building</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <string name="askForMaps">Directions?</string>
    <string name="title_activity_maps">Map</string>
</resources>
