<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.elon.cs.elonparking.SavePassActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveActivityMessage"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center|center_horizontal">

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:onClick="onSavePass"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Okay"
            android:onClick="onDenySavePass"/>
    </LinearLayout>

</LinearLayout>
