<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.elon.cs.elonparking.ChoosePassActivity"
    android:background="@drawable/elonbackground"
    >

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView android:text="@string/parking_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:gravity="center"
        android:textColor="#d59f0f" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <Spinner
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:entries="@array/passes"
        android:layout_gravity="center"
        android:id="@+id/passSelect"
        android:background="#ffffff"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView android:text="@string/building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:gravity="center"
        android:textColor="#d59f0f" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:entries="@array/buildings"
        android:layout_gravity="center"
        android:id="@+id/buildingSelect"
        android:background="#ffffff"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:text="@string/go"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal"
        android:background="#d59f0f"
        android:onClick="onSelectPass" />


</LinearLayout>
